# whisperkey

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh  whisperkey.sh
whisperkey/: __init__.py  __main__.py  app.py  audio.py  cli.py  config.py  indicator.py  notify.py  output.py  service.py  transcribe.py
